# time_tracking

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  time_tracking_db_backup
scripts/: fill_database.py  launch.json
tests/unit_tests/core/: test_summary_analysis.py
time_tracking/: config.py  main.py
time_tracking/core/: summary_analysis.py
time_tracking/database/: db_connection.py  queries.py  tables.py
time_tracking/models/: employee_models.py  simple_models.py  working_shift_models.py
time_tracking/routers/: employee_routes.py  summary_routes.py  tracking_routes.py  working_shift_routes.py
time_tracking/time_tracking.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
